starrocks/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: starrocks-http
  namespace: ${STARROCKS_NAMESPACE}
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-public
  hostnames:
  - "${STARROCKS_HOST}"
  - "${STARROCKS_PUBLIC_HOST}"
  rules:
  - backendRefs:
    - name: kube-starrocks-fe-service
      port: 8030
